.metadata/.plugins/org.eclipse.cdt.ui/Lab4_Group3.build.log
08:54:19 **** Incremental Build of configuration Debug for project Lab4_Group3 ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DUSE_HAL_DRIVER -DDEBUG -DSTM32L4S5xx -c -I../Core/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:111:3: warning: implicit declaration of function 'MX_I2C2_Init'; did you mean 'MX_TIM2_Init'? [-Wimplicit-function-declaration]
   MX_I2C2_Init();
   ^~~~~~~~~~~~
   MX_TIM2_Init
../Core/Src/main.c:118:3: warning: implicit declaration of function 'BSP_gyro_Init'; did you mean 'BSP_QSPI_Init'? [-Wimplicit-function-declaration]
   BSP_gyro_Init();
   ^~~~~~~~~~~~~
   BSP_QSPI_Init
../Core/Src/main.c:133:4: warning: implicit declaration of function 'BSP_gyro_GetXYZ'; did you mean 'BSP_GYRO_GetXYZ'? [-Wimplicit-function-declaration]
    BSP_gyro_GetXYZ(gyro);
    ^~~~~~~~~~~~~~~
    BSP_GYRO_GetXYZ
../Core/Src/main.c:138:27: warning: pointer targets in passing argument 1 of 'strlen' differ in signedness [-Wpointer-sign]
    memset(buffer,0,strlen(buffer));
                           ^~~~~~
In file included from ../Core/Src/main.c:35:0:
c:\st\stm32cubeide_1.5.1\stm32cubeide\plugins\com.st.stm32cube.ide.mcu.externaltools.gnu-tools-for-stm32.7-2018-q2-update.win32_1.5.0.202011040924\tools\arm-none-eabi\include\string.h:41:9: note: expected 'const char *' but argument is of type 'uint8_t * {aka unsigned char *}'
 size_t  strlen (const char *);
         ^~~~~~
../Core/Src/main.c:141:47: warning: pointer targets in passing argument 1 of 'strlen' differ in signedness [-Wpointer-sign]
     HAL_UART_Transmit(&huart1, buffer, strlen(buffer), 5);
                                               ^~~~~~
In file included from ../Core/Src/main.c:35:0:
c:\st\stm32cubeide_1.5.1\stm32cubeide\plugins\com.st.stm32cube.ide.mcu.externaltools.gnu-tools-for-stm32.7-2018-q2-update.win32_1.5.0.202011040924\tools\arm-none-eabi\include\string.h:41:9: note: expected 'const char *' but argument is of type 'uint8_t * {aka unsigned char *}'
 size_t  strlen (const char *);
         ^~~~~~
../Core/Src/main.c:143:50: warning: pointer targets in passing argument 1 of 'strlen' differ in signedness [-Wpointer-sign]
        HAL_UART_Transmit(&huart1, buffer, strlen(buffer), 5);
                                                  ^~~~~~
In file included from ../Core/Src/main.c:35:0:
c:\st\stm32cubeide_1.5.1\stm32cubeide\plugins\com.st.stm32cube.ide.mcu.externaltools.gnu-tools-for-stm32.7-2018-q2-update.win32_1.5.0.202011040924\tools\arm-none-eabi\include\string.h:41:9: note: expected 'const char *' but argument is of type 'uint8_t * {aka unsigned char *}'
 size_t  strlen (const char *);
         ^~~~~~
../Core/Src/main.c:147:50: warning: pointer targets in passing argument 1 of 'strlen' differ in signedness [-Wpointer-sign]
        HAL_UART_Transmit(&huart1, buffer, strlen(buffer), 5); // display 3-axis magnetometer readings
                                                  ^~~~~~
In file included from ../Core/Src/main.c:35:0:
c:\st\stm32cubeide_1.5.1\stm32cubeide\plugins\com.st.stm32cube.ide.mcu.externaltools.gnu-tools-for-stm32.7-2018-q2-update.win32_1.5.0.202011040924\tools\arm-none-eabi\include\string.h:41:9: note: expected 'const char *' but argument is of type 'uint8_t * {aka unsigned char *}'
 size_t  strlen (const char *);
         ^~~~~~
../Core/Src/main.c:151:50: warning: pointer targets in passing argument 1 of 'strlen' differ in signedness [-Wpointer-sign]
        HAL_UART_Transmit(&huart1, buffer, strlen(buffer), 5); // display 3D gyroscope readings
                                                  ^~~~~~
In file included from ../Core/Src/main.c:35:0:
c:\st\stm32cubeide_1.5.1\stm32cubeide\plugins\com.st.stm32cube.ide.mcu.externaltools.gnu-tools-for-stm32.7-2018-q2-update.win32_1.5.0.202011040924\tools\arm-none-eabi\include\string.h:41:9: note: expected 'const char *' but argument is of type 'uint8_t * {aka unsigned char *}'
 size_t  strlen (const char *);
         ^~~~~~
../Core/Src/main.c:155:50: warning: pointer targets in passing argument 1 of 'strlen' differ in signedness [-Wpointer-sign]
        HAL_UART_Transmit(&huart1, buffer, strlen(buffer), 5); // display pressure
                                                  ^~~~~~
In file included from ../Core/Src/main.c:35:0:
c:\st\stm32cubeide_1.5.1\stm32cubeide\plugins\com.st.stm32cube.ide.mcu.externaltools.gnu-tools-for-stm32.7-2018-q2-update.win32_1.5.0.202011040924\tools\arm-none-eabi\include\string.h:41:9: note: expected 'const char *' but argument is of type 'uint8_t * {aka unsigned char *}'
 size_t  strlen (const char *);
         ^~~~~~
../Core/Src/main.c: At top level:
../Core/Src/main.c:226:13: warning: conflicting types for 'MX_I2C2_Init'
 static void MX_I2C2_Init(void)
             ^~~~~~~~~~~~
../Core/Src/main.c:226:13: error: static declaration of 'MX_I2C2_Init' follows non-static declaration
../Core/Src/main.c:111:3: note: previous implicit declaration of 'MX_I2C2_Init' was here
   MX_I2C2_Init();
   ^~~~~~~~~~~~
../Core/Src/main.c: In function 'MX_I2C2_Init':
../Core/Src/main.c:236:3: error: 'hi2c2' undeclared (first use in this function)
   hi2c2.Instance = I2C2;
   ^~~~~
../Core/Src/main.c:236:3: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c: At top level:
../Core/Src/main.c:65:13: warning: 'MX_I2C1_SMBUS_Init' declared 'static' but never defined [-Wunused-function]
 static void MX_I2C1_SMBUS_Init(void);
             ^~~~~~~~~~~~~~~~~~
../Core/Src/main.c:226:13: warning: 'MX_I2C2_Init' defined but not used [-Wunused-function]
 static void MX_I2C2_Init(void)
             ^~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:57: Core/Src/main.o] Error 1
"make -j4 all" terminated with exit code 2. Build might be incomplete.

08:54:20 Build Failed. 3 errors, 12 warnings. (took 1s.47ms)

